2003-01-9  Jim Nutt

	* www/scm/index.php Cleanup/set to use Group object.

2003-01-08  Ryan T. Sammartino  <ryants@shaw.ca>

	* common/include/utils.php(util_make_links): Change e-mail
	regular expression so that e-mails must either start a line
	or be preceeded by whitespace.  This prevents URLs that
	contain e-mail addresses from getting messed up (e.g.
	http://mailman/user=foo@bar.com).

	* www/forum/include/ForumHTML.class: first call util_make_links,
	then do nl2br.  This prevents <br /> from becoming part of a URL
	that is at the end of a line.

	* www/admin/trove/trove_cat_edit.php,
	www/admin/trove/trove_cat_add.php,
	common/pm/ProjectCategory.class, www/include/bookmarks.php: Audit:
	escape special characters from user input before submitting to
	database.

2003-01-07 Tom Copeland <tom@infoether.com>

	* Added "submitted by" info to the task detail view.  Modified project_task_vw
	to include user name and realname from user table.  [tom] DB changes are in
	20030107.sql.

2003-01-06  Richard Offer

	* www/include/Layout.class, www/project/showfiles.php: patch #134:
	fix bug #131 - fix bad quotes and missing close bracket.

2003-01-06 Tom Copeland <tom@infoether.com>

	* Modifier tracker monitor buttons so they show current monitoring status.

2003-01-05 Richard Offer

	* Contributed OSX theme.  [tom] DB changes (along with some other misc changes)
	are in 20030105.sql.

2003-01-05  Roland Mas  <99.roland.mas@aist.enst.fr>

	* Removed uuencoded image files.  They are not needed anymore
	after a new upstream release.

2003-01-04  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/pm/calendar.php: show tasks in calendar.

	* www/pm/{add_task,mod_task}.php: update link to View Calendar.

	* www/include/languages/{Base,Spanish}.tab: new entries for
	calendar tasks.

	* www/include/languages/Base.tab: Bug 123: tabify "conf" entries.

	* www/my/index.php: Bug 120: fix link to unmonitor file

	* www/pm/task.php www/forum/save.php www/forum/new.php